helm-guestbook/helm-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-ingress
  namespace: helm-guestbook
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/instance: helm-guestbook
spec:
  ingressClassName: nginx
  rules:
    - host: helm-guestbook.com
      http:
        paths:
          - path: /helm-guestbook
            pathType: Prefix
            backend:
              service:
                name: helm-guestbook
                port:
                  number: 80
